sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnknownIL/testclient.prog
simstep 48 1
getvariable 0xa0 0x10 xxx
simstep 49 1
